# lrpc

./: .travis.yml  CMakeLists.txt  README.md
cmake/: config.h.in
examples/: CMakeLists.txt
examples/async_call/: CMakeLists.txt  common.h  invoker.c  provider.c
examples/simple/: CMakeLists.txt  async-invoker.c  async-provider.c  common.h  invoker.c  provider.c  sync-invoker.c  sync-provider.c
include/: lrpc-internal.h  lrpc.h
src/: CMakeLists.txt  endpoint.c  endpoint.h  func_table.c  func_table.h  interface.c  interface.h  lrpc.c  lrpc.h  method.c  method.h  msg.c  msg.h  socket.c  socket.h
tests/: 01core.c  02thread.c  CMakeLists.txt  check_lrpc.c  test_common.h
